Finich seq2seq using previous Air

--- a/seq2seq_data.ipynb
+++ b/seq2seq_data.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'Model.Decoder' from '/media/yuhua/1863d8d5-bc6b-4e3e-b4c7-e9e1f87a42a1/KDD/Model/Decoder.py'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from torch.autograd import Variable\n",
@@ -12,7 +23,18 @@
     "import pandas as pd \n",
     "import numpy as np \n",
     "import torch\n",
-    "from Model.Encoder import VanillaEncoder"
+    "import torch.nn as nn\n",
+    "\n",
+    "from Model import Encoder\n",
+    "from Model import Decoder\n",
+    "from Model.Seq2Seq import Seq2Seq\n",
+    "# from  Model.Encoder import VanillaEncoder \n",
+    "from importlib import reload\n",
+    "\n",
+    "reload(Encoder)\n",
+    "reload(Decoder)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -37,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([48, 10, 6])\n",
+      "torch.Size([240, 10, 6])\n",
       "torch.Size([48, 10, 6])\n"
      ]
     }
@@ -50,20 +72,140 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "Enc = VanillaEncoder(hidden_size = 300,\n",
-    "                     output_size = 300).cuda()"
+    "Enc = Encoder.VanillaEncoder(hidden_size = 300,\n",
+    "                             output_size = 6).cuda()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# encoder_output, encoder_hidden, encoder_transform = Enc.forward(batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output, hidden = Enc.forward(batch)"
+    "# print(encoder_output.size())\n",
+    "# print(encoder_hidden.size())\n",
+    "# print(encoder_transform.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Dec = Decoder.VanillaDecoder(input_size = 6,\n",
+    "                             hidden_size = 300, \n",
+    "                             output_size = 6,\n",
+    "                             use_cuda = True).cuda()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# decoder_outputs, decoder_hidden = Dec.forward(context_vector=encoder_hidden, \n",
+    "#                                                        decoder_first_input=encoder_transform )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(decoder_outputs.size())\n",
+    "# print(decoder_hidden.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq2seq = Seq2Seq(encoder=Enc,\n",
+    "                  decoder=Dec)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_outputs, decoder_outputs = seq2seq.forward(batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 240, 6])\n",
+      "torch.Size([10, 48, 6])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(encoder_outputs.size())\n",
+    "print(decoder_outputs.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.abs(torch.FloatTensor([[-1, -2, 3],[1,2,3]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       " 2\n",
+       " 4\n",
+       " 6\n",
+       "[torch.FloatTensor of size 3]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.sum(0)"
    ]
   },
   {
