Fix Smape Criterion

--- a/seq2seq_data.ipynb
+++ b/seq2seq_data.ipynb
@@ -177,35 +177,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = torch.abs(torch.FloatTensor([[-1, -2, 3],[1,2,3]]))"
+    "a = torch.FloatTensor([[1, 2, 3],[-1,-2,-3]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "b = torch.abs(torch.FloatTensor([[1, 2, 3],[1,2,3]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       " 1  2  3\n",
+       "-1 -2 -3\n",
+       "[torch.FloatTensor of size 2x3]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "\n",
-       " 2\n",
-       " 4\n",
-       " 6\n",
-       "[torch.FloatTensor of size 3]"
+       " 1  2  3\n",
+       " 1  2  3\n",
+       "[torch.FloatTensor of size 2x3]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.sum(0)"
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def smape_loss(concat_predict, concat_label):  \n",
+    "\n",
+    "       \n",
+    "        loss = 2 * torch.abs(concat_predict - concat_label).sum() /  (concat_predict + concat_label).sum()\n",
+    "        loss = loss / (concat_predict.size(0) )   # Divide the batch size and number of days to get mean \n",
+    "\n",
+    "        return loss\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smape_loss(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       " 2  4  6\n",
+       " 0  0  0\n",
+       "[torch.FloatTensor of size 2x3]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a+b"
    ]
   },
   {
